JumpScript/tests/baselines/reference/propertyAccessOfReadonlyIndexSignature.errors.txt
tests/cases/compiler/propertyAccessOfReadonlyIndexSignature.jump(6,1): error TS2542: Index signature in type 'Test' only permits reading.


==== tests/cases/compiler/propertyAccessOfReadonlyIndexSignature.jump (1 errors) ====
    interface Test {
        readonly [key: string]: string;
    }
    
    declare var a: Test;
    a.foo = 'baz';
    ~~~~~
!!! error TS2542: Index signature in type 'Test' only permits reading.
    